c4prj1_deck/grade.txt
Grading at Tue Oct  1 20:22:58 UTC 2019
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:308:12: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘size_t {aka long unsigned int}’ [-Werror=format=]
     printf("index: %d,  match[index]: %u, \n", index, match[index]);
            ^
cc1: all warnings being treated as errors
Compilation of eval.c failed

Overall Grade: F
